--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,10 +6,9 @@
     <title>My library </title>
 </head>
 <body>
-    before
     <br>
+    <%- include('../partial/header.ejs') %>
     <%- body %>
     <br>
-    after
 </body>
 </html>
